tests/typec-test/test_out/spec-call.txt
error: not all parameter specs are satisfied
  --> spec-call/root.ctl:15:31
   |
15 | fn other_main() -> u32 => pass(0)
   |                               ^^^ here
   |
   = info: missing implementations:
            u32: Clay

info: tir repr of functions:
fn [: Clay] pass(var0: param0) -> param0 return var0

fn [] main() -> uint return pass[uint](0)

fn [] last_main() -> 0\Foo[uint] return pass[0\Foo[uint]](0\Foo[uint]\{0})



